lab00: fixed links

--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -11,7 +11,7 @@
       assignments: 
         - 
           title: "Lab00 - Command Line, Unix, Vim"
-          url: "labs/lab00.html"
+          url: "labs/Lab00.html"
         - 
           deadline: 2023-01-23
           title: "HW00 - Hello World, Compile Errors"
