adding gchoe TA blurb

--- a/_data/staff.yaml
+++ b/_data/staff.yaml
@@ -7,6 +7,13 @@
     office_hours: TBD
     location: Park 200C
 -
+    name: Grace Choe
+    pic: gchoe.jpg
+    email: gchoe@brynmawr.edu
+    office_hours: TBD
+    extra_title: Teaching Assistant
+    location: TBD
+-
     name: name
     pic: tmp.jpg
     email: email
